# MapReduce-Rust

./: .gitignore  Cargo.toml  README.md
mr/: Cargo.toml
mr/src/: coordinator.rs  lib.rs  rpc.rs  task.rs  worker.rs
mr/tests/: test.rs
mr_app/: Cargo.toml
mr_app/src/: client.rs  server.rs
resource/simple_test/: 2.txt  3.txt  4.txt
