[package]
name = "mr"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = { version = "0.35", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.217"
serde_json = "1.0.137"

[lib]
name = "mr"
path = "src/lib.rs"
