[package]
name = "mr_app"
version = "0.1.0"
edition = "2021"

[dependencies]
mr = { path = "../mr" }
tarpc = { version = "0.35", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.217"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"